@@ -19,13 +19,13 @@ import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
+@Transactional(readOnly = true)
 public class AsignacionTrabajadorProyectoServiceImpl implements AsignacionTrabajadorProyectoService {
 
-    private final AsignacionTrabajadorProyectoRepository asignacionRepository;
+    private final AsignacionTrabajadorProyectoRepository asignacionTpRepository;
     private final TrabajadorRepository trabajadorRepository;
     private final ProyectoRepository proyectoRepository;
     private final AsignacionProyectoContratistaRepository asignacionPcRepository;
@@ -33,83 +33,46 @@ public class AsignacionTrabajadorProyectoServiceImpl implements AsignacionTrabaj
     private final ProyectoServiceImpl proyectoService;
     private final AsignacionProyectoContratistaServiceImpl asignacionPcService;
 
-    // ─── FIND ALL ─────────────────────────────────────────────────────────────
     @Override
-    @Transactional(readOnly = true)
-    public List<AsignacionTrabajadorProyectoResponseDTO> findAll() {
-        return asignacionRepository.findAll()
+    public List<AsignacionTrabajadorProyectoResponse> findByProyecto(Integer idProyecto) {
+        return asignacionTpRepository.findByProyecto_IdProyecto(idProyecto)
                 .stream()
-                .map(this::toResponse)
-                .collect(Collectors.toList());
+                .map(AsignacionTrabajadorProyectoResponse::from)
+                .toList();
     }
 
-    // ─── FIND BY ID ───────────────────────────────────────────────────────────
     @Override
-    @Transactional(readOnly = true)
-    public AsignacionTrabajadorProyectoResponseDTO findById(Integer id) {
-        return toResponse(getAsignacionOrThrow(id));
-    }
-
-    // ─── FIND BY PROYECTO ─────────────────────────────────────────────────────
-    @Override
-    @Transactional(readOnly = true)
-    public List<AsignacionTrabajadorProyectoResponseDTO> findByProyecto(Integer idProyecto) {
-        return asignacionRepository.findByProyecto_IdProyecto(idProyecto)
+    public List<AsignacionTrabajadorProyectoResponse> findByTrabajador(Integer idTrabajador) {
+        return asignacionTpRepository.findByTrabajador_IdTrabajador(idTrabajador)
                 .stream()
-                .map(this::toResponse)
-                .collect(Collectors.toList());
+                .map(AsignacionTrabajadorProyectoResponse::from)
+                .toList();
     }
 
-    // ─── FIND BY TRABAJADOR ───────────────────────────────────────────────────
     @Override
-    @Transactional(readOnly = true)
-    public List<AsignacionTrabajadorProyectoResponseDTO> findByTrabajador(Integer idTrabajador) {
-        return asignacionRepository.findByTrabajador_IdTrabajador(idTrabajador)
-                .stream()
-                .map(this::toResponse)
-                .collect(Collectors.toList());
+    public AsignacionTrabajadorProyectoResponse findById(Integer id) {
+        return AsignacionTrabajadorProyectoResponse.from(getOrThrow(id));
     }
 
-    // ─── FIND BY ASIGNACION PC ────────────────────────────────────────────────
-    @Override
-    @Transactional(readOnly = true)
-    public List<AsignacionTrabajadorProyectoResponseDTO> findByAsignacionPc(Integer idAsignacionPc) {
-        return asignacionRepository.findByAsignacionProyectoContratista_IdAsignacionPc(idAsignacionPc)
-                .stream()
-                .map(this::toResponse)
-                .collect(Collectors.toList());
-    }
-
-    // ─── FIND BY ESTATUS ──────────────────────────────────────────────────────
-    @Override
-    @Transactional(readOnly = true)
-    public List<AsignacionTrabajadorProyectoResponseDTO> findByEstatus(EstatusAsignacion estatus) {
-        return asignacionRepository.findByEstatusAsignacion(estatus)
-                .stream()
-                .map(this::toResponse)
-                .collect(Collectors.toList());
-    }
-
-    // ─── CREATE ───────────────────────────────────────────────────────────────
     @Override
     @Transactional
-    public AsignacionTrabajadorProyectoResponseDTO create(AsignacionTrabajadorProyectoRequestDTO dto) {
-        Trabajador trabajador = trabajadorRepository.findById(dto.getIdTrabajador())
+    public AsignacionTrabajadorProyectoResponse create(AsignacionTrabajadorProyectoRequest request) {
+        Trabajador trabajador = trabajadorRepository.findById(request.getIdTrabajador())
                 .orElseThrow(() -> new EntityNotFoundException(
-                        "Trabajador no encontrado con id: " + dto.getIdTrabajador()));
+                        "Trabajador no encontrado con id: " + request.getIdTrabajador()));
 
-        Proyecto proyecto = proyectoRepository.findById(dto.getIdProyecto())
+        Proyecto proyecto = proyectoRepository.findById(request.getIdProyecto())
                 .orElseThrow(() -> new EntityNotFoundException(
-                        "Proyecto no encontrado con id: " + dto.getIdProyecto()));
+                        "Proyecto no encontrado con id: " + request.getIdProyecto()));
 
         AsignacionProyectoContratista asignacionPc = asignacionPcRepository
-                .findById(dto.getIdAsignacionPc())
+                .findById(request.getIdAsignacionPc())
                 .orElseThrow(() -> new EntityNotFoundException(
-                        "Contrato (asignacion_pc) no encontrado con id: " + dto.getIdAsignacionPc()));
+                        "Asignación proyecto-contratista no encontrada con id: " + request.getIdAsignacionPc()));
 
-        if (!asignacionPc.getProyecto().getIdProyecto().equals(dto.getIdProyecto())) {
-            throw new IllegalArgumentException(
-                    "El contrato indicado no pertenece al proyecto especificado.");
+        if (asignacionTpRepository.existsByTrabajador_IdTrabajadorAndProyecto_IdProyecto(
+                request.getIdTrabajador(), request.getIdProyecto())) {
+            throw new IllegalArgumentException("El trabajador ya está asignado a este proyecto.");
         }
 
         if (asignacionRepository.existsByTrabajador_IdTrabajadorAndProyecto_IdProyecto(
@@ -117,32 +80,25 @@ public class AsignacionTrabajadorProyectoServiceImpl implements AsignacionTrabaj
             throw new IllegalArgumentException("El trabajador ya está asignado a este proyecto.");
         }
 
-        AsignacionTrabajadorProyecto asignacion = new AsignacionTrabajadorProyecto();
-        asignacion.setTrabajador(trabajador);
-        asignacion.setProyecto(proyecto);
-        asignacion.setAsignacionProyectoContratista(asignacionPc);
-        mapDtoToEntity(dto, asignacion);
-        asignacion.setEstatusAsignacion(EstatusAsignacion.ACTIVO);
-        return toResponse(asignacionRepository.save(asignacion));
+        return AsignacionTrabajadorProyectoResponse.from(asignacionTpRepository.save(asignacion));
     }
 
-    // ─── UPDATE ───────────────────────────────────────────────────────────────
     @Override
     @Transactional
     public AsignacionTrabajadorProyectoResponseDTO update(Integer id,
                                                           AsignacionTrabajadorProyectoRequestDTO dto) {
         AsignacionTrabajadorProyecto asignacion = getAsignacionOrThrow(id);
 
-        Trabajador trabajador = trabajadorRepository.findById(dto.getIdTrabajador())
+        Trabajador trabajador = trabajadorRepository.findById(request.getIdTrabajador())
                 .orElseThrow(() -> new EntityNotFoundException(
-                        "Trabajador no encontrado con id: " + dto.getIdTrabajador()));
+                        "Trabajador no encontrado con id: " + request.getIdTrabajador()));
 
-        Proyecto proyecto = proyectoRepository.findById(dto.getIdProyecto())
+        Proyecto proyecto = proyectoRepository.findById(request.getIdProyecto())
                 .orElseThrow(() -> new EntityNotFoundException(
-                        "Proyecto no encontrado con id: " + dto.getIdProyecto()));
+                        "Proyecto no encontrado con id: " + request.getIdProyecto()));
 
         AsignacionProyectoContratista asignacionPc = asignacionPcRepository
-                .findById(dto.getIdAsignacionPc())
+                .findById(request.getIdAsignacionPc())
                 .orElseThrow(() -> new EntityNotFoundException(
                         "Contrato (asignacion_pc) no encontrado con id: " + dto.getIdAsignacionPc()));
 
@@ -162,32 +118,26 @@ public class AsignacionTrabajadorProyectoServiceImpl implements AsignacionTrabaj
         asignacion.setTrabajador(trabajador);
         asignacion.setProyecto(proyecto);
         asignacion.setAsignacionProyectoContratista(asignacionPc);
-        mapDtoToEntity(dto, asignacion);
-        return toResponse(asignacionRepository.save(asignacion));
+        asignacion.setPuestoEnProyecto(request.getPuestoEnProyecto());
+        asignacion.setFechaInicio(request.getFechaInicio());
+        asignacion.setFechaFinEstimada(request.getFechaFinEstimada());
+        if (request.getEstatusAsignacion() != null) {
+            asignacion.setEstatusAsignacion(request.getEstatusAsignacion());
+        }
+        asignacion.setObservaciones(request.getObservaciones());
+
+        return AsignacionTrabajadorProyectoResponse.from(asignacionTpRepository.save(asignacion));
     }
 
-    // ─── CAMBIAR ESTATUS ──────────────────────────────────────────────────────
-    @Override
-    @Transactional
-    public AsignacionTrabajadorProyectoResponseDTO cambiarEstatus(Integer id, EstatusAsignacion estatus) {
-        AsignacionTrabajadorProyecto asignacion = getAsignacionOrThrow(id);
-        asignacion.setEstatusAsignacion(estatus);
-        return toResponse(asignacionRepository.save(asignacion));
-    }
-
-    // ─── DELETE ───────────────────────────────────────────────────────────────
     @Override
     @Transactional
     public void delete(Integer id) {
-        if (!asignacionRepository.existsById(id)) {
-            throw new EntityNotFoundException("Asignación no encontrada con id: " + id);
-        }
-        asignacionRepository.deleteById(id);
+        getOrThrow(id);
+        asignacionTpRepository.deleteById(id);
     }
 
-    // ─── HELPERS ──────────────────────────────────────────────────────────────
-    private AsignacionTrabajadorProyecto getAsignacionOrThrow(Integer id) {
-        return asignacionRepository.findById(id)
+    private AsignacionTrabajadorProyecto getOrThrow(Integer id) {
+        return asignacionTpRepository.findById(id)
                 .orElseThrow(() -> new EntityNotFoundException(
                         "Asignación trabajador-proyecto no encontrada con id: " + id));
     }
